Tiny overflow-x issue @ #machines-pane

--- a/src/mist/io/static/main.css
+++ b/src/mist/io/static/main.css
@@ -213,6 +213,7 @@ div.networks{
 #machines-pane {
 	width: 100%;
 	overflow: auto;
+	overflow-x: hidden;
 	display: none;
 }
 
